# serializer version: 1
# name: test_choose_selector_serialize
  dict({
    'selector': dict({
      'choose': dict({
        'choices': dict({
          'entity_choice': dict({
            'selector': dict({
              'entity': dict({
                'domain': list([
                  'light',
                ]),
                'multiple': False,
                'reorder': False,
              }),
            }),
          }),
          'number_choice': dict({
            'selector': dict({
              'number': dict({
                'max': 100.0,
                'min': 0.0,
                'mode': 'slider',
                'step': 1.0,
              }),
            }),
          }),
          'object_choice': dict({
            'selector': dict({
              'object': dict({
                'description_field': 'percentage',
                'fields': dict({
                  'name': dict({
                    'required': True,
                    'selector': dict({
                      'text': dict({
                        'multiline': False,
                        'multiple': False,
                      }),
                    }),
                  }),
                  'percentage': dict({
                    'selector': dict({
                      'number': dict({
                        'mode': 'box',
                        'step': 1.0,
                      }),
                    }),
                  }),
                }),
                'label_field': 'name',
                'multiple': False,
              }),
            }),
          }),
          'text_choice': dict({
            'selector': dict({
              'text': dict({
                'multiline': True,
                'multiple': False,
              }),
            }),
          }),
        }),
      }),
    }),
  })
# ---
# name: test_choose_selector_serialize.1
  dict({
    'selector': dict({
      'choose': dict({
        'choices': dict({
          'number_choice': dict({
            'selector': dict({
              'number': dict({
                'max': 100.0,
                'min': 0.0,
                'mode': 'slider',
                'step': 1.0,
              }),
            }),
          }),
          'object_choice': dict({
            'selector': dict({
              'object': dict({
                'description_field': 'percentage',
                'fields': dict({
                  'name': dict({
                    'required': True,
                    'selector': dict({
                      'text': dict({
                        'multiline': False,
                        'multiple': False,
                      }),
                    }),
                  }),
                  'object': dict({
                    'selector': dict({
                      'object': dict({
                        'fields': dict({
                          'choose': dict({
                            'required': True,
                            'selector': dict({
                              'choose': dict({
                                'choices': dict({
                                  'number_choice': dict({
                                    'selector': dict({
                                      'number': dict({
                                        'max': 100.0,
                                        'min': 0.0,
                                        'mode': 'slider',
                                        'step': 1.0,
                                      }),
                                    }),
                                  }),
                                  'text_choice': dict({
                                    'selector': dict({
                                      'text': dict({
                                        'multiline': True,
                                        'multiple': False,
                                      }),
                                    }),
                                  }),
                                }),
                              }),
                            }),
                          }),
                        }),
                        'multiple': False,
                      }),
                    }),
                  }),
                  'percentage': dict({
                    'selector': dict({
                      'number': dict({
                        'mode': 'box',
                        'step': 1.0,
                      }),
                    }),
                  }),
                }),
                'label_field': 'name',
                'multiple': False,
              }),
            }),
          }),
          'text_choice': dict({
            'selector': dict({
              'text': dict({
                'multiline': True,
                'multiple': False,
              }),
            }),
          }),
        }),
      }),
    }),
  })
# ---
# name: test_nested_object_selectors
  dict({
    'selector': dict({
      'object': dict({
        'description_field': 'percentage',
        'fields': dict({
          'name': dict({
            'required': True,
            'selector': dict({
              'text': dict({
                'multiline': False,
                'multiple': False,
              }),
            }),
          }),
          'object': dict({
            'selector': dict({
              'object': dict({
                'description_field': 'other_name',
                'fields': dict({
                  'new_object': dict({
                    'required': True,
                    'selector': dict({
                      'object': dict({
                        'description_field': 'description',
                        'fields': dict({
                          'description': dict({
                            'required': True,
                            'selector': dict({
                              'text': dict({
                                'multiline': False,
                                'multiple': False,
                              }),
                            }),
                          }),
                          'title': dict({
                            'required': True,
                            'selector': dict({
                              'text': dict({
                                'multiline': False,
                                'multiple': False,
                              }),
                            }),
                          }),
                        }),
                        'label_field': 'title',
                        'multiple': False,
                      }),
                    }),
                  }),
                  'no_name': dict({
                    'required': True,
                    'selector': dict({
                      'text': dict({
                        'multiline': False,
                        'multiple': False,
                      }),
                    }),
                  }),
                  'other_name': dict({
                    'required': True,
                    'selector': dict({
                      'text': dict({
                        'multiline': False,
                        'multiple': False,
                      }),
                    }),
                  }),
                }),
                'label_field': 'no_name',
                'multiple': False,
              }),
            }),
          }),
        }),
        'label_field': 'name',
        'multiple': True,
      }),
    }),
  })
# ---
# name: test_object_selector_uses_selectors
  dict({
    'selector': dict({
      'object': dict({
        'description_field': 'percentage',
        'fields': dict({
          'name': dict({
            'required': True,
            'selector': dict({
              'text': dict({
                'multiline': False,
                'multiple': False,
              }),
            }),
          }),
          'percentage': dict({
            'selector': dict({
              'number': dict({
                'max': 100.0,
                'min': 0.0,
                'mode': 'slider',
                'step': 1.0,
              }),
            }),
          }),
        }),
        'label_field': 'name',
        'multiple': True,
      }),
    }),
  })
# ---
